Added version 2.00 of SLang interpreter with non-functional features

--- a/AV/PL/interpreters/version1.06/grammar.htm
+++ b/AV/PL/interpreters/version1.06/grammar.htm
@@ -28,7 +28,7 @@
                    &  |  & < app\ exp > \\
                    &  |  & < intlit\ exp > \\
                    &  |  & < papp\ exp > \\
-       < fn\  exp >  & ::= & fn\quad '('\  < var\ exp >^*\ ')'\ =>\  < exp > \\
+       < fn\  exp >  & ::= & fn\quad '('\quad  (  < var\ exp >\   (\ ','\  < var\ exp >  )^*\  )? \quad ')'\ =>\  < exp > \\
        < app\ exp >  & ::= & '('\  < exp >\   < exp >^*\ ')' \\
        < papp\ exp > & ::= & < prim\ op >\  '('\  < args >\  ')' \\
        < args >      & ::= & (  < exp >\   (\ ','\  < exp >  )^*\  )?\\
