--- a/AV/PL/interpreters/version2.00/interpreter.html
+++ b/AV/PL/interpreters/version2.00/interpreter.html
@@ -2,15 +2,6 @@
 <head>
     <title>SLang 1 interpreter</title>
     <style>
-      #editor { 
-          position: relative;
-          margin-left: auto;
-          margin-right: auto;
-	  width:580;
-          height: 200;
-           text-align: left;
-      }
-
     html, body {
         margin: 0px;
     }
@@ -61,15 +52,10 @@
     #interpreterbutton {
            font-size: 20px;
     }
-    #testsButton {
-         margin-left: 50px;
-    }
     </style>
     <script type="text/javascript"
 	    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
    </script>
- <script src="http://d1n0x3qji82z53.cloudfront.net/src-min-noconflict/ace.js" type="text/javascript" charset="utf-8"></script>
-
   <script src="./scripts/init.js"></script>
   <script src="./scripts/grammar.js"></script>
   <script src="./scripts/absyn.js"></script>
@@ -84,9 +70,16 @@
 <br />
 <input type="button" value="Show Grammar" onclick="SLang.openGrammarWindow()" />
 <input type="button" id="testsButton" value="Show Test Programs" onclick="SLang.toggleTestPrograms()" />
+
+
+<input type="button" id="testSuite" value="Run Test Suite" onclick="SLang.runTestSuite()" />
+
 </div>
 
+
+
 <div id="tests">
+
 
 <h2>Test programs</h2>
 
@@ -138,25 +131,17 @@ The interpreter uses the following startup environment:<br />
 
 <div id="main">
 
-<h1>Interpreter Version 1.04</h1>
+<h1>Interpreter</h1>
 
 <strong>Enter the program you want to interpret below:</strong><br /><br />
-
- <div id="editor">hello</div>
-  <script>
-        var editor = ace.edit("editor");
-        editor.setTheme("ace/theme/clouds");
-        editor.getSession().setMode("ace/mode/javascript");
-	editor.getSession().setUseWorker(false);
-  </script>
+<textarea id="interpreterinput" rows="5" cols="80">
+</textarea>
 
 <br/><br/>
 
 <input type="button" id="interpreterbutton" 
         value="Interpret the program shown above"
-       onclick="interpreteroutput.value=SLang.interpret(editor.getValue())"/>
-
-
+        onclick="interpreteroutput.value=SLang.interpret(document.getElementById('interpreterinput').value);" /> 
 <br /><br />
 <strong>Output of the interpreter:</strong><br /><br />
 <textarea id="interpreteroutput" rows="5" cols="80">
