--- a/AV/PL/interpreters/version2.00/grammar.htm
+++ b/AV/PL/interpreters/version2.00/grammar.htm
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>SLang 1 Grammar</title>
+  <title>SLang 2 Grammar</title>
     <script type="text/javascript"
 	    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
    </script>
@@ -23,15 +23,18 @@
 \(
     \begin{array}{lcl}
        < program > & ::= & < exp > \\
-       < exp >     & ::= &  < var\ exp > \\
-                   &  |  & < fn\ exp > \\
-                   &  |  & < app\ exp > \\
-                   &  |  & < intlit\ exp > \\
-                   &  |  & < papp\ exp > \\
-       < fn\  exp >  & ::= & fn\quad '('\  < var\ exp >^*\ ')'\ =>\  < exp > \\
-       < app\ exp >  & ::= & '('\  < exp >\   < exp >^*\ ')' \\
-       < papp\ exp > & ::= & < prim\ op >\  '('\  < args >\  ')' \\
-       < args >      & ::= & (  < exp >\   (\ ','\  < exp >  )^*\  )?\\
+       < exp >     & ::= &  < var\ exp > | < fn\ exp > | < app\ exp > | < intlit\ exp > | < papp\ exp > \\
+                   &  |  & < let\ exp > \\
+                   &  |  & < print\ exp > \\
+                   &  |  & < assign\ exp > \\
+   < fn\  exp >    & ::= & fn\quad '('\  < var\ exp >^*\ ')'\ =>\  < exp > \\
+   < app\ exp >    & ::= & '('\  < exp >\   < exp >^*\ ')' \\
+   < papp\ exp >   & ::= & < prim\ op >\  '('\  < args >\  ')' \\
+   < args >        & ::= & (  < exp >\   (\ ','\  < exp >  )^*\  )?\\
+   < let\ exp >    & ::= & let\ (< var\ exp >\ =\ < exp >)^+\ in\ < exp > (\ ';'\ < exp >)^*\ end\\
+   < print\ exp >  & ::= & print  < exp > \\
+   < assign\ exp > & ::= & set\ < var\ exp >\ =\ < exp > \\
+
 
     \end{array}
 \)
