atrying to solve the unmappable chracter problem

--- a/Exercises/RecurTutor/recw24PROG.html
+++ b/Exercises/RecurTutor/recw24PROG.html
@@ -37,7 +37,11 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test">  Given the following recursive function signature, write the function code such that takes two positive integers X and Y as its input where  X&lt;Y,	and outputs the minimal number of invocations of the operations +1 and ∗2 that are required to obtain Y from X. For Example: If the inputs 10 17, the output will be 7 (due to 7 invocations of +1). For the input 10 21, the output will be 2 (due to ∗2 and then +1).
+      <p class="problem" id = "test">  Given the following recursive function signature, write the function code 
+      such that takes two positive integers X and Y as its input where  X less than Y,	and outputs 
+      the minimal number of invocations of the operations +1 and ∗2 that are required to obtain Y from X. 
+      For Example: If the inputs 10 17, the output will be 7 (due to 7 invocations of +1). For the input 10 21, the output will be 2 
+      (due to ∗2 and then +1).
 			
  <br />
 </h4>
