Fixed a description of an ex in RecurTutor2

--- a/Exercises/RecurTutor2/btDepthPROG.html
+++ b/Exercises/RecurTutor2/btDepthPROG.html
@@ -24,9 +24,8 @@
   <div class="problems">
     <div> <!-- Supresses answer box -->
       <p class="problem" id = "test"> The depth of a binary tree is
-      the length of the path to the deepest node. An empty tree or a
-      tree with a single node has a depth of 0, and a tree with a root
-      node and a single child has a depth of 1. Write a recursive
+      the length of the path to the deepest node. An empty tree has a depth of 0, and a tree with a root node only
+      has a depth of 1 and so on. Write a recursive
       function to find the depth of the binary tree pointed at by
       "root".</p> 
 
