Putting back the exercises to the summary

--- a/Exercises/RecurTutor/recWriteSumm1.html
+++ b/Exercises/RecurTutor/recWriteSumm1.html
@@ -16,7 +16,7 @@
 </head>
 
 <body  data-height="580" data-width="1000">
- 
+  <div class="exercise" data-name="recw24PROG"></div>
   <div class="exercise" data-name="recw26PROG"></div>
   <div class="exercise" data-name="recw28PROG"></div>
   <div class="exercise" data-name="recw29PROG"></div>
