--- a/Exercises/RecurTutor/recWriteSumm3.html
+++ b/Exercises/RecurTutor/recWriteSumm3.html
@@ -16,6 +16,7 @@
 </head>
 
 <body  data-height="900" data-width="1000">
+  <div class="exercise" data-name="recw19PROG"></div>
   <div class="exercise" data-name="recw20PROG"></div>
   <div class="exercise" data-name="recw21PROG"></div>
   <div class="exercise" data-name="recw31PROG"></div>
