Added alpha-conversion exercise to PL/LC chapter

--- a/Exercises/PL/AlphaConversion.html
+++ b/Exercises/PL/AlphaConversion.html
@@ -96,10 +96,12 @@
 	</div>
 	<div class="problems">
 		<div>
-		  <div class="question"><p>Rewrite the complete &lambda;
-		  expression below after having &alpha;-converted
-		  (using the variable "a") the &lambda; abstraction
-		  whose binding occurrence is underlined.</p>
+		  <div class="question"><p>Rewrite the complete
+		  &lambda; expression below after having
+		  &alpha;-converted (using the variable "a") the
+		  &lambda; abstraction whose binding occurrence is
+		  underlined. In your answer, use the character "^" to
+		  denote the character "&lambda;".</p>
 		    <div id="jsav"></div>
 		  </div>
 		  <div class="solution" data-type="regex">
