Graph intro questions with hints fully added. Need to fix the summary so it displays. Also first of three space requirement exercises

--- a/Exercises/Development/GAdjacentTF1.html
+++ b/Exercises/Development/GAdjacentTF1.html
@@ -75,7 +75,8 @@ function getAnswer(node){
   <li><var>"False"</var></li>              
       </ul>
       <div class="hints">
-        <p>Add hint.</p>
+        <p>Two verticies are adjacent if there exists and edge between them.</p>
+        
       </div>
     </div>
   </div>
