--- a/Exercises/Development/GConnCompTF.html
+++ b/Exercises/Development/GConnCompTF.html
@@ -72,7 +72,8 @@ var initJSAV = function () {
   <li><var>"undetermined"</var></li>             
       </ul>
       <div class="hints">
-        <p>Add hint.</p>
+        <p>The maximally connected subgraphs of an undirected graph are called connected components.</p>
+        <p> Verticies 0, 1, 2, 3, and 4 form one connnected component</p>
       </div>
     </div>
   </div>
