--- a/Exercises/Development/GraphCliqueTF1.html
+++ b/Exercises/Development/GraphCliqueTF1.html
@@ -21,8 +21,9 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>A clique is a subset of the graph where all the verticies in 
+          the subgraph connect to the other verticies </p>
+       
       </div>
     </div>
   </div>
