--- a/Exercises/Development/GraphCompleteTF1.html
+++ b/Exercises/Development/GraphCompleteTF1.html
@@ -20,8 +20,12 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>A graph containing all possible edges 
+          is said to be a complete graph</p>
+        <p>Any subset of V where all vertices in the 
+          subset connect to all other vertices in the 
+          subset is called a clique</p>
+          <p>A complete graph is a clique of size |V|.</p>
       </div>
     </div>
   </div>
