--- a/Exercises/Development/GraphDigraphTF2.html
+++ b/Exercises/Development/GraphDigraphTF2.html
@@ -20,8 +20,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>A directed graph is also called a digraph.</p>
+        
       </div>
     </div>
   </div>
