--- a/Exercises/Development/GraphFreeTreeTF3.html
+++ b/Exercises/Development/GraphFreeTreeTF3.html
@@ -20,8 +20,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>A free tree is a connected, undirected 
+          graph with no simple cycles </p>
       </div>
     </div>
   </div>
