--- a/Exercises/Development/GraphPathTF2.html
+++ b/Exercises/Development/GraphPathTF2.html
@@ -21,8 +21,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>A path is a simple path if all 
+        vertices on the path are distinct.</p>
       </div>
     </div>
   </div>
