--- a/Exercises/Development/GraphTermMC3.html
+++ b/Exercises/Development/GraphTermMC3.html
@@ -12,15 +12,17 @@
 	<div class="problems">
 		<div id="problem-type-or-description">
 			<p class="question">When a vertex  Q is connected by an edge to a vertex K, what is the term for their relationship?</p>
-			<div class="solution"><var>"Q and K are adjacent</var></div>
+			<div class="solution"><var>"Q and K are adjacent"</var></div>
 			<ul class="choices">
 	<li><var>"Q and K are incident"</var></li>
 	<li><var>"Q and K are insecure"</var></li>
 	<li><var>"Q and K are isolated"<var></li>
 		  </ul>
 		  <div class="hints">
-        <p>I ned to come up with a hing</p>
-        <p>I need to come up with another hint.</p>
+        <p>An edge connect two verticies is incedent 
+        	of these verticies.</p>
+        <p>Two verticies connected by an edge are 
+        	adjacent.</p>
       </div>
 		</div>
 	</div>
