--- a/Exercises/Development/GraphTermMC4.html
+++ b/Exercises/Development/GraphTermMC4.html
@@ -20,8 +20,8 @@
 	<li><var>"complete graph"</var></li>
 			</ul>
 			<div class="hints">
-        <p>I ned to come up with a hing</p>
-        <p>I need to come up with another hint.</p>
+        <p>A graph with edges directed from one vertex to another 
+        	is a directed graph.</p>
       </div>
 		</div>
 	</div>
