--- a/Exercises/Development/GraphTermMC5.html
+++ b/Exercises/Development/GraphTermMC5.html
@@ -19,8 +19,7 @@
 	<li><var>"connected graph"</var></li>
 			</ul>
 			<div class="hints">
-        <p>I ned to come up with a hing</p>
-        <p>I need to come up with another hint.</p>
+        <p>An acyclilc graph has no cycles.</p>
       </div>
 		</div>
 	</div>
