--- a/Exercises/Development/GraphTermTF3.html
+++ b/Exercises/Development/GraphTermTF3.html
@@ -21,8 +21,9 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>A weighted graph can be a directed or
+          undirected graph.</p>
+        <p>A weighted graph must have edge weights.</p>
       </div>
     </div>
   </div>
