--- a/Exercises/Development/GraphTermTF4.html
+++ b/Exercises/Development/GraphTermTF4.html
@@ -20,8 +20,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>A graph is a set of edges and vertcies.</p>
+        <p>The set of edges may be empty.</p>
       </div>
     </div>
   </div>
