--- a/Exercises/Development/GraphTermTF5.html
+++ b/Exercises/Development/GraphTermTF5.html
@@ -20,8 +20,8 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>A DAG is a Directed Acyclic Graph.</p>
+        <p>An acyclic graph has no cycles.</p>
       </div>
     </div>
   </div>
