--- a/Exercises/Development/GraphTermsTF1.html
+++ b/Exercises/Development/GraphTermsTF1.html
@@ -21,8 +21,9 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Come up with hints.</p>
-        <p>More hints.</p>
+				<p>A graph containing all possible edges is 
+          said to be a complete graph.</p>
+
       </div>
     </div>
   </div>
