--- a/Exercises/Development/GraphTermsTF2.html
+++ b/Exercises/Development/GraphTermsTF2.html
@@ -21,8 +21,10 @@
   <li><var>"False"</var></li>              
       </ul>
       <div class="hints">
-        <p>Come up with hints.</p>
-        <p>More hints.</p>
+        <p>An edge connecting verticies is said 
+          to be incident.</p>
+        <p>The degree of a vertex is the number
+         of graph edges it touches.</p>
       </div>
     </div>
   </div>
