--- a/Exercises/Development/GraphAdjacTF2.html
+++ b/Exercises/Development/GraphAdjacTF2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-require="math">
 <head>
-  <title>Graph Adjacent TF 1</title>
+  <title>Graph Adjacent TF 2</title>
   <script src="../../lib/jquery.min.js"></script>
   <script src="../../lib/jquery-ui.min.js"></script>
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
@@ -20,7 +20,9 @@
 	<li><var>"False"</var></li>			  	  	 
       </ul>
       <div class="hints">
-				<p>Neighboring verticies are also adjacent.</p>
+				<p>Two verticies are consider neighbors if there is an
+         edge connecting them.</p>
+         <p>Neighboring verticies are adjacent to one another.</p>
       </div>
     </div>
   </div>
