--- a/Exercises/Development/GraphIntroSumm.html
+++ b/Exercises/Development/GraphIntroSumm.html
@@ -8,16 +8,35 @@
 </head>
 
 <body data-height="650" data-width="950">
-	<!-- <div class="exercise" data-name="FreeTreeTF"></div> -->
-	<!-- <div class="exercise" data-name="GraphAdjacTF"></div> -->
-	<!-- <div class="exercise" data-name="GraphCompleteTF"></div> -->
-	<!-- <div class="exercise" data-name="GraphDigraphTF"></div> -->
-	<!-- <div class="exercise" data-name="GraphPathTF"></div> -->
-	<!-- <div class="exercise" data-name="GraphTermMC1"></div> -->
-	<!-- <div class="exercise" data-name="GraphTermMC2"></div> -->
-	<!-- <div class="exercise" data-name="GraphTermMC3"></div> -->
-	<!-- <div class="exercise" data-name="GraphTermMC4"></div> -->
-	<!-- <div class="exercise" data-name="GraphTermMC5"></div> -->
-	<div class="exercise" data-name="GraphTermsTF"></div>
+  
+	<!--<div class="exercise" data-name="GVertexDegreeMC"></div> -->
+	<div class="exercise" data-name="GVAdjacentTF1"></div>
+	<div class="exercise" data-name="GConnCompTF"></div>
+	<div class="exercise" data-name="GPredecessorTF1"></div>
+	<div class="exercise" data-name="GPredecessorTF2"></div>
+	<div class="exercise" data-name="GraphAdjacentTF1"></div>
+	<div class="exercise" data-name="GraphAdjacentTF2"></div>
+	<div class="exercise" data-name="GraphCliqueTF1"></div>
+	<div class="exercise" data-name="GraphCompleteTF1"></div>
+	<div class="exercise" data-name="GraphCompleteTF2"></div>
+	<div class="exercise" data-name="GraphDigraphTF2"></div>
+	<div class="exercise" data-name="GraphDigraphTF1"></div>
+	<div class="exercise" data-name="GraphFreeTreeTF1"></div>
+	<div class="exercise" data-name="GraphFreeTreeTF2"></div>
+	<div class="exercise" data-name="GraphFreeTreeTF3"></div>
+	<div class="exercise" data-name="GraphPathTF1"></div>
+	<div class="exercise" data-name="GraphPathTF2"></div>
+	<div class="exercise" data-name="GraphPathTF3"></div>
+	<div class="exercise" data-name="GraphTermMC1"></div>
+	<div class="exercise" data-name="GraphTermMC2"></div>
+	<div class="exercise" data-name="GraphTermMC3"></div>
+	<div class="exercise" data-name="GraphTermMC4"></div>
+	<div class="exercise" data-name="GraphTermMC5"></div>
+	<div class="exercise" data-name="GraphTermsTF1"></div>
+	<div class="exercise" data-name="GraphTermsTF2"></div>
+	<div class="exercise" data-name="GraphTermsTF3"></div>
+	<div class="exercise" data-name="GraphTermsTF4"></div>
+	<div class="exercise" data-name="GraphTermsTF5"></div>
+
 </body>
 </html>
