--- a/Exercises/Development/GraphTermMC1.html
+++ b/Exercises/Development/GraphTermMC1.html
@@ -21,8 +21,8 @@
 	<li><var>"Directed"</var></li>	  	 
       </ul>
       <div class="hints">
-        <p>I ned to come up with a hing</p>
-        <p>I need to come up with another hint.</p>
+        <p>An edge connecting two verticies is said to be 
+          incident on the verticies. </p>
       </div>
 
     </div>
