--- a/Exercises/Development/GraphTermMC2.html
+++ b/Exercises/Development/GraphTermMC2.html
@@ -19,8 +19,11 @@
   <li><var>"directed"</var></li>
       </ul>
       <div class="hints">
-        <p>I ned to come up with a hing</p>
-        <p>I need to come up with another hint.</p>
+        <p>A dense graph is a graph with many edges.</p>
+        <p>A sparse graph is a graph with relatively 
+          few edges .</p>
+        <p> A complete graph is a graph containing all 
+          possible edges </p>
       </div>
     </div>
   </div>
