--- a/Exercises/Development/GraphSpaceReqSum.html
+++ b/Exercises/Development/GraphSpaceReqSum.html
@@ -9,6 +9,7 @@
 
 <body data-height="650" data-width="950">
 	<div class="exercise" data-name="GraphSpaceReq1"></div>
+	<div class="exercise" data-name="GraphSpaceReq2"></div>
 
 </body>
 </html>
