Added call by macro to version 2.01 of SLang interpreter

--- a/AV/PL/interpreters/version2.01/interpreter.html
+++ b/AV/PL/interpreters/version2.01/interpreter.html
@@ -100,7 +100,9 @@
 	        '<input type="button" value="by-ref"  onclick="SLang.go(' +
                  i + ',\'byref\')" />&nbsp;' +
 	        '<input type="button" value="by-cpr"  onclick="SLang.go(' +
-                 i + ',\'bycpr\')" />&nbsp;' 
+                 i + ',\'bycpr\')" />&nbsp;' +
+	        '<input type="button" value="by-mac"  onclick="SLang.go(' +
+                 i + ',\'bymac\')" />&nbsp;' 
                  + '\n</td></tr>';
     }
     $("#testsCases").html(rows);
