minor changes to summary questions

--- a/Exercises/Development/GraphSpaceReq1.html
+++ b/Exercises/Development/GraphSpaceReq1.html
@@ -9,7 +9,7 @@
 
 <script>
 function genAnswer(numV, vertBytes) {
-  space = numV*numV*verttBytes 
+  space = numV*numV*vertBytes 
   return space
 }
 </script>
