--- a/AV/Development/interpolationSearchPRO.html
+++ b/AV/Development/interpolationSearchPRO.html
@@ -1,32 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+  <meta charset="utf-8">
   <title>Interpolation Search</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <style>
+    /* jsav container and canvas */
     .jsavcontainer {
       height: auto;
     }
-    .jsavbararray .jsavnode {
-      width: 35px;
+    .jsavline {
+      height: 17px;
     }
-    .jsavcanvas {
-      height: 250px !important;
-      max-height: 250px !important;
+    #jsavcontainer .jsavcanvas {
+      height: 332px !important;
+      max-height: 332px !important;
     }
     .jsavcanvas svg {
-      z-index: 101;
-      height: 262px;
+      /*z-index: 101;*/
+      height: 302px;
     }
+    .jsavhighlight {
+      background-color: #fe7 !important;
+    }
+    .returnline {
+      background-color: #def;
+    }
+    /* bar array */
+    .jsavbararray {
+      padding-bottom: 70px;
+    }
+    .jsavbararray .jsavnode {
+      width: 25px;
+    }
+    .jsavbararray .jsavvaluelabel {
+      font-size: 90%;
+    }
+    /* pointers */
+    .jsavpointer.selected {
+      background-color: transparent;
+    }
+    .jsavpointer.selected .jsavpointerarea {
+      background-color: #bbf;
+    }
+    .jsavpointer .jsavlabel {
+      position: relative;
+      top: 40px;
+    }
+    .jsavpointer .jsavpointerarea {
+      background-color: #ccc;
+      border: none;
+      border-radius: 5px;
+      height: 20px;
+      width: 20px;
+    }
+    /* code */
+    .jsavcode.collapsed {
+      height: 22px;
+      background-color: #FAFAFA;
+    }
+    .jsavcode.collapsed::before {
+      content: "Double click to show code";
+    }
+    .jsavcode.collapsed .jsavcodeline {
+      display: none;
+    }
+    /* return box */
     .returnbox {
       width: 400px;
       text-align: center;
-      margin: 15px auto;
+      margin: 10px auto;
       padding: 10px;
-      border: 1px solid #555;
       background-color: #ddd;
       border-radius: 5px;
     }
@@ -34,19 +80,27 @@
       color: #090;
       font-weight: bold;
     }
+    /* model answer */
+    .jsavmodelanswer .jsavcanvas {
+      min-width: 0 !important;
+    }
+    .jsavmodelanswer .jsavline {
+      height: 50px;
+    }
   </style>
 </head>
 
 <body>
   <div id="jsavcontainer">
+    <a id="settings" class="jsavsettings" href="#"></a>
     <h1 class="exerciseTitle"></h1>
     <p class="instructLabel"></p>
     <p class="instructions"></p>
-    <p align="center" class="jsavexercisecontrols"></p>
+    <p class="jsavexercisecontrols"></p>
     <p class="jsavoutput jsavline"></p>
     <div class="jsavcanvas"></div>
     <form class="returnbox">
-      <span id="returnlabel"></span><input id="returninput" type="number" value="0" style="width: 50px"></input>&nbsp;<input type="submit" id="returnbutton"></input>&nbsp;<span id="returndone" style="visibility: hidden;"></span>
+      <span id="returnlabel"></span><input id="returninput" type="number" value="0" style="width: 50px">&nbsp;<input type="submit" id="returnbutton">&nbsp;<span id="returndone" style="visibility: hidden;"></span>
     </form>
   </div>
 
