--- a/Exercises/Binary/HuffmanDecodeFIB.html
+++ b/Exercises/Binary/HuffmanDecodeFIB.html
@@ -9,8 +9,7 @@
   <script src="../../ODSAkhan-exercises/khan-exercise.js"></script>
   <script src="../../JSAV/build/JSAV-min.js"></script>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
-  <link rel="stylesheet" href="../../../AV/Binary/huffmanCON.css" type="text/css" />
-  <link rel="stylesheet" href="../../../DataStructures/huffman.css" type="text/css" />
+  <link rel="stylesheet" href="../../DataStructures/huffman.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
   <style>
     .jsavcontainer {
