Rephrasing of a RecurTutor Exercise

--- a/Exercises/RecurTutor/recwbca2PROG.html
+++ b/Exercises/RecurTutor/recwbca2PROG.html
@@ -33,8 +33,7 @@
 
   <div class="problems">
     <div> <!-- Supresses answer box -->
-      <p class="problem" id = "test"> Given the following recursive function, write down the missing action that should be done at the base case so that this function
-   concatenate the values in an array named list and return it in a string. The values must be seprated with a space and in the order of increasing subscript.
+      <p class="problem" id = "test"> Given the following recursive function, write down the missing code so that this function concatenates the values in an array named list and returns it in a String. The values must be separated with a space and in the order of increasing subscript. The initial call to the function will be made with an index value of zero.
       <br />
     </h4>
     <p></p>
