--- a/AV/PL/interpreters/version3.00/interpreter.html
+++ b/AV/PL/interpreters/version3.00/interpreter.html
@@ -67,7 +67,7 @@
   <script src="./scripts/interpreter.js"></script>
   <script src="./scripts/samples.js"></script>
 </head>
-<body>
+<body onload="SLang.toggleTestPrograms()">
 
 <div id="header">
 <h1>SLang 2</h1>
@@ -106,7 +106,7 @@
 <h1>Interpreter</h1>
 
 <strong>Enter the program you want to interpret below:</strong><br /><br />
-<textarea id="interpreterinput" rows="5" cols="80">
+<textarea id="interpreterinput" rows="15" cols="80">
 </textarea>
 
 <br/><br/>
