--- a/AV/Development/PrimAVPE.html
+++ b/AV/Development/PrimAVPE.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
+    <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
     <link rel="stylesheet" href="PrimAVPE.css" />
   </head>
   <body>
@@ -44,6 +45,7 @@
     <script src="../../DataStructures/binaryheap.js"></script>
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
+    <script src="graphUtils.js"></script>
     <script src="PrimAVPE.js"></script>
   </body>
 </html>
