Changed instructions for Prim's algorithm to match exercise better.

--- a/AV/Development/PrimAVPE.html
+++ b/AV/Development/PrimAVPE.html
@@ -28,8 +28,7 @@
         <div class="jsavcanvas">
           <p class="instructLabel">Instructions:</p>
           <p class="instructions">
-            Reproduce the behavior of Prim's Algorithm for the given graph below. Just Click on the appropriate Graph Nodes to add to the MST. 
-			Start with Node A. In case of similar weights add nodes alphabetically.
+            Reproduce the behavior of Prim's Algorithm for the given graph below. Click on the appropriate <strong>edges</strong> to add them to the MST. Start with Node A. In case of similar weights add nodes alphabetically.
           </p>
           <p id="procontrols">
             <span class="jsavscore"></span>
