Added config file to DijkstraPE

--- a/AV/Development/DijkstraPE.html
+++ b/AV/Development/DijkstraPE.html
@@ -26,12 +26,8 @@
       </table>
       <form class="avcontainer">
         <div class="jsavcanvas">
-          <p class="instructLabel">Instructions:</p>
-          <p class="instructions">
-            Reproduce the behavior of Dijstra's Algorithm for the given graph below.
-            Click on the <strong>edges</strong> in the order they are traversed by the algorithm. 
-            Start with Node A. In case of similar costs, add nodes alphabetically.
-          </p>
+          <p class="instructLabel"></p>
+          <p class="instructions"></p>
           <p id="procontrols">
             <span class="jsavscore"></span>
           </p>
