--- a/AV/Development/graphDFSPE.html
+++ b/AV/Development/graphDFSPE.html
@@ -25,15 +25,8 @@
       </table>
       <form class="avcontainer">
         <div class="jsavcanvas">
-          <p class="instructLabel">Instructions:</p>
-          <p class="instructions">
-            Reproduce the behavior of the DFS algorithm
-	    for the graph below. Just click on the <strong>edges</strong>
-	    in the order that they will be traversed by the DFS algorithm.
-	    Start with Node A. If there is more than one node that
-	    could be visited next, choose the one that comes first in
-	    alphabetical order.
-          </p>
+          <p class="instructLabel"></p>
+          <p class="instructions"></p>
           <p id="procontrols">
             <span class="jsavscore"></span>
           </p>
