--- a/AV/Development/AlgAnal/SummationOneToN.html
+++ b/AV/Development/AlgAnal/SummationOneToN.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Bubble Sort Running Time Analysis</title>
+  <title>Summation from 1 To n</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../../lib/odsaAV-min.css" type="text/css" />
